[tool]

[tool.poetry]

authors = ["Jeremy A Gray <jeremy.a.gray@gmail.com>"]
description = 'FCC DA Sea Level Predictor Project'
name = "fcc-da-sea-level-predictor"
version = "0.1.0"

[tool.poetry.dependencies]

matplotlib = "^3.3"
pandas = "*"
python = "^3.7"
scipy = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
pytest-cov = "^2.10"
pytest-flake8 = "^1.0"
